--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-bottom: 70px;
 }
 
 .App-logo {
@@ -30,4 +31,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+p,  li {
+  padding: .3em;
+}
+
+ .active-link{
+  font-weight: 700;
 }
